--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ENCABEZADO -->
   <header>
-    <h1 id="titulo-principal">Bienvenido a mi página web dinámica</h1>
+    <h1 id="titulo-principal">Esta es la tarea Grupal</h1>
     <nav>
       <ul>
         <li><a href="#">Inicio</a></li>
